@@ -26,7 +26,7 @@
 .\" OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN
 .\" IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd October 21, 2010
+.Dd December 10, 2010
 .Dt ATF-C++-API 3
 .Os
 .Sh NAME
@@ -38,7 +38,9 @@
 .Nm ATF_REQUIRE ,
 .Nm ATF_REQUIRE_EQ ,
 .Nm ATF_REQUIRE_ERRNO ,
+.Nm ATF_REQUIRE_IN ,
 .Nm ATF_REQUIRE_MATCH ,
+.Nm ATF_REQUIRE_NOT_IN ,
 .Nm ATF_REQUIRE_THROW ,
 .Nm ATF_REQUIRE_THROW_RE ,
 .Nm ATF_SKIP ,
@@ -59,7 +61,9 @@
 .Fn ATF_REQUIRE "expression"
 .Fn ATF_REQUIRE_EQ "expression_1" "expression_2"
 .Fn ATF_REQUIRE_ERRNO "exp_errno" "bool_expression"
+.Fn ATF_REQUIRE_IN "element" "collection"
 .Fn ATF_REQUIRE_MATCH "regexp" "string_expression"
+.Fn ATF_REQUIRE_NOT_IN "element" "collection"
 .Fn ATF_REQUIRE_THROW "expected_exception" "statement"
 .Fn ATF_REQUIRE_THROW_RE "expected_exception" "regexp" "statement"
 .Fn ATF_SKIP "reason"
@@ -313,9 +317,17 @@ takes an expression and raises a failure if it evaluates to false.
 takes two expressions and raises a failure if the two do not evaluate to
 the same exact value.
 .Pp
+.Fn ATF_REQUIRE_IN
+takes an element and a collection and validates that the element is present in
+the collection.
+.Pp
 .Fn ATF_REQUIRE_MATCH
 takes a regular expression and a string and raises a failure if the regular
 expression does not match the string.
+.Pp
+.Fn ATF_REQUIRE_NOT_IN
+takes an element and a collection and validates that the element is not present
+in the collection.
 .Pp
 .Fn ATF_REQUIRE_THROW
 takes the name of an exception and a statement and raises a failure if
